--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 /* Base Styles (applied to both pages) */
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif; /* Use Roboto font */
     margin: 0; /* Reset default body margin */
 }
 
